--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+URL: https://github.com/weiyangyu/MOSIBMA
+BugReports: https://github.com/weiyangyu/MOSIBMA/issues
